<resources>
    <string name="app_name">MusicGenerator</string>
    <string name="credits">credits: Gustav Raimund Niko</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_createMusic">Create Music</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_midiSamples">Midi samples</string>
    <string name="navigation_drawer_soundBook">Soundbook</string>

    <string name="action_settings">Settings</string>
    <string name="magic_btn">MAGIC</string>
    <string name="record_btn">Rec...</string>
    <string name="test_string">test string</string>
    
    <string name="set_GenreNet">GenreNet</string>
    <string name="set_GenreNet_key">PREF_GENRENET</string>
    <string name="set_GenreNet_dependency">PREF_GENRENET_ENABLED</string>
    <string name="set_GenreNet_dialogtitle">chose a pretrained GenreNet</string>
    <string name="set_GenreNet_default_entry">Classic</string>
    <string name="set_Autosave">Autosave</string>
    <string name="set_Autosave_key">PREF_AUTOSAVE</string>
    <string name="set_Autosave_summary">autosave created music to soundbook</string>
    <string name="set_soundbook_size">Delete Soundbook</string>
    <string name="set_soundbook_size_key">PREF_SOUNDBOOK_SIZE</string>



</resources>
